apps/minio/minio-api-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: storage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio-api.bnguyen.dev`)
      kind: Rule
      services:
        - name: minio
          port: 9000
