apps/minio/minio-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingressroute
  namespace: storage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.bnguyen.dev`)
      kind: Rule
      services:
        - name: minio-console
          port: 9001
